--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
+    "format": "prettier --write .",
     "start": "electron ."
   },
   "devDependencies": {
-    "electron": "23.1.3"
+    "electron": "23.1.3",
+    "prettier": "^3.6.2"
   }
 }
