--- a/package.json
+++ b/package.json
@@ -4,10 +4,38 @@
   "main": "main.js",
   "scripts": {
     "format": "prettier --write .",
-    "start": "electron ."
+    "start": "electron .",
+    "build": "electron-builder",
+    "build-win": "electron-builder --win",
+    "build-mac": "electron-builder --mac",
+    "build-linux": "electron-builder --linux"
   },
   "devDependencies": {
     "electron": "23.1.3",
+    "electron-builder": "^24.13.3",
     "prettier": "^3.6.2"
+  },
+  "build": {
+    "appId": "com.yourname.notes",
+    "productName": "Notes",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "**/*",
+      "!node_modules/**/*"
+    ],
+    "win": {
+      "target": "nsis",
+      "icon": "icon.ico"
+    },
+    "mac": {
+      "target": "dmg",
+      "icon": "icon.icns"
+    },
+    "linux": {
+      "target": "AppImage",
+      "icon": "icon.png"
+    }
   }
 }
